fix identify/track null user key check, also don't create index event for alias